# AlorCppRest

./: AlorCppRest_sourcetrail.srctrlprj  CMakeLists.txt  WarpOpenAPIv2.yml  build.sh  gen.sh  main.cpp
AlorCppRest/: CMakeLists.txt  README.md  build.sh
AlorCppRest/.openapi-generator/: FILES
AlorCppRest/include/AlorCppRest/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
AlorCppRest/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
AlorCppRest/src/api/: ClientInfoApi.cpp  DeprecatedApi.cpp  InstrumentsApi.cpp  OrderGroupsApi.cpp  OrdersApi.cpp  OrdersWebSocketApi.cpp  OtherApi.cpp  StopOrdersV2Api.cpp  SubscriptionsApi.cpp
AlorCppRest/src/model/: Alltrade.cpp  Alltradeshistory.cpp  Bodyrequest_CreateOrderGroup.cpp  Bodyrequest_ModifyOrderGroup.cpp  Bodyrequest_OrdersActionsLimit.cpp  Bodyrequest_OrdersActionsLimitTV.cpp  Bodyrequest_OrdersActionsLimitTVput.cpp  Bodyrequest_OrdersActionsLimitTVput_instrument.cpp  Bodyrequest_OrdersActionsLimitTVput_user.cpp  Bodyrequest_OrdersActionsLimit_Instrument.cpp  Bodyrequest_OrdersActionsLimit_User.cpp  Bodyrequest_OrdersActionsMarket.cpp  Bodyrequest_OrdersActionsMarketTV.cpp  Bodyrequest_OrdersActionsMarketTVput.cpp  Bodyrequest_OrdersActionsMarketTVput_user.cpp  Bodyrequest_OrdersActionsStop.cpp  Bodyrequest_OrdersActionsStopLimitTV.cpp  Bodyrequest_OrdersActionsStopLimitTVWarp.cpp  ClientType.cpp  (+97 more)
include/: alorcpp.h
src/: alorcpp.cpp
(+125 files in other folders)
